<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_multi_robot_tools</name>
  <version>0.0.0</version>
  <description>Tools for ROS2 to make working in a multi-robot setup easier.</description>
  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oeler</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
